--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <meta name="theme-color" content="#ff0039" />
+  <meta name="description" content="Web development portfolio of Dallas Gale." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://use.typekit.net/xzh5ibs.css">
   <title>DallasGale.dev - Front-end develooer & designer</title>
