--- a/src/netlifyneedsthis.html
+++ b/src/netlifyneedsthis.html
@@ -1,4 +1,4 @@
-<form hidden data-netlify-recaptcha="true" method="POST" data-netlify="true" name="contact" action="/thanks/"
+<form hidden data-netlify-recaptcha="true" method="POST" data-netlify="true" name="Get In Touch" action="/thanks/"
   netlify-honeypot="bot-field">
   <div>
     <input type="text" name="bot-field" hidden />
