Updated meta description

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <meta name="theme-color" content="#ff0039" />
   <meta name="description" content="Web development portfolio of Dallas Gale." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>DallasGale.dev - Front-end develooer & designer</title>
+  <title>DallasGale.dev - Front End Developer & Designer</title>
 </head>
 
 <body>
